--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "readmeFilename": "README.md",
   "nbbpm": {
-    "compatibility": ">= 0.6.0 ^0.7.0"
+    "compatibility": "^1.0.0"
   }
 }
